  * Options subpages now have a back button so you can go back without saving
  * There now is a message informing you if the file transfer was ok
  * In the file transfer ok window you can see the speed of the file transfer
  * Progressbar for file transfer is now drawn more precise
  * You can see size and cost of file transfer before sending
  * New option: Auto connect on startup
  * New option for MOTOROLA: Light timeout and manual light control
  * A message how to disable keylock is shown on splash screen if trying it the wrong way
  * Name of recipient is shown on top of message edit field
  * On the ChatHistory screen you can now see how many chats are open and in which one you are
  * Contact names are now also updated on server list if renamed in Jimm
  * Added new option "Color scheme"
  * Added "Shadow connection" hack for Nokia 6230 users
  * Contact list sorts without case sensitivity now
  * Target modules and free heap memory are displayed on about screen.
  * Password is saved in UTF-8 format now
  * Jimm supporst minimizing in supporting platforms (e.g. SE K700i)
  * New images that are smaller and should work on Nokia 6230i
  * Added Ukrainian translation
  * Added Polish translation
  
________________________________________________________________________________
VERSION 0.4.1

  * Improved navigation in chat
  * NEW FEATURE: Now Jimm is able to send out status messages
  * NEW FEATURE: Now Jimm is able to request the status messages from other users
  * NEW FEATURE: You can now select Jimm to only vibrate in keylock mode
  * NEW FEATURE: You can now remove yourself from another users contact list
  * NEW FEATURE: It is possible to add any message from chat to history  
  * NEW FEATURE: Added menu to clear history for all contacts
  * BUGFIX: Problems with filetransfer to ips with more then 2 digits resolved
  * BUGFIX: Timestamp for offline messages is now correct
  