@@ -210,4 +210,5 @@ VERSION 0.4.1
   * NEW FEATURE: Added menu to clear history for all contacts
   * BUGFIX: Problems with filetransfer to ips with more then 2 digits resolved
   * BUGFIX: Timestamp for offline messages is now correct
+  * Jimm wil now only weakup from minimized if your status is online of free for chat
   
